# yggdrasil-map-ng

./: .gitignore  flake.nix  module.nix  pyproject.toml  readme.md
app/: __init__.py  __main__.py  config.py  crawler.py  utils.py  ygg.py
