[tool.poetry]
name = "ygg-map"
version = "0.0.1"
description = "Map for yggdrasil"
authors = ["Rubikoid <rubikoid@rubikoid.ru>"]
# readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
fastapi = "^0.104.1"
loguru = "^0.7.2"
devtools = "^0.12.2"
uvicorn = "^0.24.0.post1"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# poetry = "ygg-map:start"
poetry = "poetry.console.application:main"
